--- a/src/app/views/channel/channel.component.scss
+++ b/src/app/views/channel/channel.component.scss
@@ -1,24 +1,29 @@
-mat-grid-tile {
-    border-radius: 8px;
+.channel-component {
+    display: flex;
+    align-items: center;
 }
-mat-card {
-    width: 22rem; 
-    height: fit-content; 
+.channel-button {
+    padding: 0.5rem 1rem;
+    border-radius: 100px;
     cursor: pointer;
-    border-radius: 12px;
+    font-size: 0.9rem;
+    outline: none;
+    border: none;
+    background-color: rgba(0, 0, 0, 0.1);
 }
 .card-title {
-    width: 25rem;
+    width: 14rem;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
     padding-top: 10px;
+    padding-left: 10px;
 }
 .card-title p {
     font-weight: 500;
-    font-size: 1rem;
+    font-size: 0.8rem;
 }
 .text-content-card {
     width: 22rem;
