--- a/src/app/views/channel/channel.component.html
+++ b/src/app/views/channel/channel.component.html
@@ -44,7 +44,7 @@
                 </div>
                 
             </mat-tab>
-            <mat-tab label="Playlists"> Playlists </mat-tab>
+            <mat-tab label="Playlists"> Playlists1 </mat-tab>
         </mat-tab-group>
     </div>
 </mat-card>
