--- a/src/app/views/channel/channel.component.scss
+++ b/src/app/views/channel/channel.component.scss
@@ -31,3 +31,24 @@
     display: flex;
     align-items: center;
 }
+.playlist-symbol {
+    background-color: rgba($color: #000000, $alpha: 0.5);
+    width: fit-content;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    height: 1rem;
+    padding: 0.2rem;
+    font-size: 0.8rem;
+    position: absolute;
+    top: 7.5rem;
+    left: 10.4rem;
+}
+.playlist-mat-icon {
+    font-size: 1.3rem;
+    width: 1.3rem;
+    height: 1rem;
+}
+mat-grid-tile, mat-card {
+    border-radius: 0.8rem;
+}
